# SDMS

./: CMakeLists.txt  README.md  adminInterface.h  adminf.h  mainpage.cpp  student.h
include/: add.h  addData.h  adminInterface.h  adminf.h  delete.h  deleteData.h  modifyData.h  modify_data.h  student.h  viewChoice.h  viewData.h
res/: Data.csv
src/: delete.cc  deleteData.cpp  mainpage.cpp  student.cc  student.cpp  viewChoice.cc  viewData.cpp
